--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation 'com.zhihu.android:matisse:0.5.3-beta3'
+    implementation 'com.yanzhenjie:permission:2.0.3'
+
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:3.7.0'
 }
