--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:3.7.0'
+
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
