--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     defaultConfig {
         applicationId "com.example.redbook"
         minSdk 21
-        targetSdk 31
+        targetSdk 27
         versionCode 1
         versionName "1.0"
 
@@ -52,4 +52,6 @@ dependencies {
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
 }
